# SportTotalTest

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
infer/: TRTInference.cpp  TRTInference.h  logger.cpp
src/: TRTInference.cpp  TRTInference.h  logger.h
